reworked model improved db structure tracking more information about sold items